--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "displayName": "Privy Auth + Wallet",
   "description": "Social login + embedded Solana wallet powered by Privy",
   "usecase": "Auth",
-  "keywords": ["privy", "auth", "social-login", "embedded-wallet", "solana", "nextjs"],
+  "keywords": [
+    "privy",
+    "auth",
+    "social-login",
+    "embedded-wallet",
+    "solana",
+    "nextjs"
+  ],
   "version": "0.0.0",
   "private": true,
   "create-solana-dapp": {
@@ -25,6 +32,7 @@
     "@solana-program/system": "^0.12.0",
     "@solana-program/token": "^0.11.0",
     "@solana/kit": "^6.1.0",
+    "@solana/web3.js": "^1.98.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.575.0",
